# web-torrio

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  server.js  vue.config.js
client/public/: index.html
client/src/: App.vue  config.js
server/: __init__.py
